apache-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-helm
spec:
  selector:
    app: apache-helm
  ports:
  - port: 80
    targetPort: 80
