apache-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-helm
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - apache.local
      secretName: apache-tls

  rules:
    - host: apache.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-helm
                port:
                  number: 80
